// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-generator generate full html file with favicon string 1`] = `
<link rel="manifest" href="/manifest.json" />
<meta name="mobile-web-app-capable" content="yes">
<meta name="theme-color" content="#fff" />
<meta name="application-name" content="test" />
<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png" />
<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
<link rel="apple-touch-icon" sizes="167x167" href="/apple-touch-icon-167x167.png" />
<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
<link rel="apple-touch-icon" sizes="1024x1024" href="/apple-touch-icon-1024x1024.png" />
<meta name="apple-mobile-web-app-capable" content="yes" />
<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
<meta name="apple-mobile-web-app-title" content="test" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-640x1136.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-750x1334.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-828x1792.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1125x2436.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1242x2208.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1242x2688.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1536x2048.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1668x2224.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1668x2388.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-2048x2732.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1620x2160.png" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1136x640.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2160x1620.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1334x750.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1792x828.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2436x1125.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2208x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2688x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2048x1536.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2224x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2388x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2732x2048.png" />
<link rel="shortcut icon" href="favicon.test.ico" />
<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
<meta name="msapplication-TileColor" content="#fff" />
<meta name="msapplication-TileImage" content="/mstile-144x144.png /">
<meta name="msapplication-config" content="/browserconfig.xml /">
`;

exports[`html-generator generate full html file with local path 1`] = `
<link rel="manifest" href="/manifest.json" />
<meta name="mobile-web-app-capable" content="yes">
<meta name="theme-color" content="#fff" />
<meta name="application-name" content="test" />
<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png" />
<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
<link rel="apple-touch-icon" sizes="167x167" href="/apple-touch-icon-167x167.png" />
<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
<link rel="apple-touch-icon" sizes="1024x1024" href="/apple-touch-icon-1024x1024.png" />
<meta name="apple-mobile-web-app-capable" content="yes" />
<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
<meta name="apple-mobile-web-app-title" content="__tests__" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-640x1136.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-750x1334.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-828x1792.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1125x2436.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1242x2208.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1242x2688.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1536x2048.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1668x2224.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1668x2388.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-2048x2732.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1620x2160.png" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1136x640.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2160x1620.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1334x750.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1792x828.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2436x1125.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2208x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2688x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2048x1536.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2224x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2388x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2732x2048.png" />
<link rel="shortcut icon" href="/favicon.ico" />
<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
<meta name="msapplication-TileColor" content="#fff" />
<meta name="msapplication-TileImage" content="/mstile-144x144.png /">
<meta name="msapplication-config" content="/browserconfig.xml /">
`;

exports[`html-generator generate full html file with url 1`] = `
<link rel="manifest" href="http://example.com/manifest.json" />
<meta name="mobile-web-app-capable" content="yes">
<meta name="theme-color" content="#fff" />
<meta name="application-name" content="test" />
<link rel="apple-touch-icon" sizes="57x57" href="http://example.com/apple-touch-icon-57x57.png" />
<link rel="apple-touch-icon" sizes="60x60" href="http://example.com/apple-touch-icon-60x60.png" />
<link rel="apple-touch-icon" sizes="72x72" href="http://example.com/apple-touch-icon-72x72.png" />
<link rel="apple-touch-icon" sizes="76x76" href="http://example.com/apple-touch-icon-76x76.png" />
<link rel="apple-touch-icon" sizes="114x114" href="http://example.com/apple-touch-icon-114x114.png" />
<link rel="apple-touch-icon" sizes="120x120" href="http://example.com/apple-touch-icon-120x120.png" />
<link rel="apple-touch-icon" sizes="144x144" href="http://example.com/apple-touch-icon-144x144.png" />
<link rel="apple-touch-icon" sizes="152x152" href="http://example.com/apple-touch-icon-152x152.png" />
<link rel="apple-touch-icon" sizes="167x167" href="http://example.com/apple-touch-icon-167x167.png" />
<link rel="apple-touch-icon" sizes="180x180" href="http://example.com/apple-touch-icon-180x180.png" />
<link rel="apple-touch-icon" sizes="1024x1024" href="http://example.com/apple-touch-icon-1024x1024.png" />
<meta name="apple-mobile-web-app-capable" content="yes" />
<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
<meta name="apple-mobile-web-app-title" content="__tests__" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-640x1136.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-750x1334.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-828x1792.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1125x2436.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1242x2208.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1242x2688.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1536x2048.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1668x2224.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1668x2388.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-2048x2732.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1620x2160.png" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-1136x640.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2160x1620.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-1334x750.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-1792x828.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2436x1125.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2208x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2688x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2048x1536.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2224x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2388x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2732x2048.png" />
<link rel="shortcut icon" href="http://example.com/favicon.ico" />
<link rel="icon" type="image/png" sizes="16x16" href="http://example.com/favicon-16x16.png" />
<link rel="icon" type="image/png" sizes="32x32" href="http://example.com/favicon-32x32.png" />
<link rel="icon" type="image/png" sizes="48x48" href="http://example.com/favicon-48x48.png" />
<meta name="msapplication-TileColor" content="#fff" />
<meta name="msapplication-TileImage" content="http://example.com/mstile-144x144.png /">
<meta name="msapplication-config" content="http://example.com/browserconfig.xml /">
`;

exports[`html-generator generate full html file without short_name 1`] = `
<link rel="manifest" href="/manifest.json" />
<meta name="mobile-web-app-capable" content="yes">
<meta name="theme-color" content="#fff" />
<meta name="application-name" content="test" />
<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png" />
<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
<link rel="apple-touch-icon" sizes="167x167" href="/apple-touch-icon-167x167.png" />
<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
<link rel="apple-touch-icon" sizes="1024x1024" href="/apple-touch-icon-1024x1024.png" />
<meta name="apple-mobile-web-app-capable" content="yes" />
<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
<meta name="apple-mobile-web-app-title" content="test" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-640x1136.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-750x1334.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-828x1792.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1125x2436.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1242x2208.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/apple-touch-startup-image-1242x2688.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1536x2048.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1668x2224.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1668x2388.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-2048x2732.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/apple-touch-startup-image-1620x2160.png" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1136x640.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2160x1620.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1334x750.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-1792x828.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2436x1125.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2208x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/apple-touch-startup-image-2688x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2048x1536.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2224x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2388x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/apple-touch-startup-image-2732x2048.png" />
<link rel="shortcut icon" href="/favicon.ico" />
<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
<meta name="msapplication-TileColor" content="#fff" />
<meta name="msapplication-TileImage" content="/mstile-144x144.png /">
<meta name="msapplication-config" content="/browserconfig.xml /">
`;

exports[`html-generator generate html file without manifest 1`] = `
<link rel="apple-touch-icon" sizes="57x57" href="http://example.com/apple-touch-icon-57x57.png" />
<link rel="apple-touch-icon" sizes="60x60" href="http://example.com/apple-touch-icon-60x60.png" />
<link rel="apple-touch-icon" sizes="72x72" href="http://example.com/apple-touch-icon-72x72.png" />
<link rel="apple-touch-icon" sizes="76x76" href="http://example.com/apple-touch-icon-76x76.png" />
<link rel="apple-touch-icon" sizes="114x114" href="http://example.com/apple-touch-icon-114x114.png" />
<link rel="apple-touch-icon" sizes="120x120" href="http://example.com/apple-touch-icon-120x120.png" />
<link rel="apple-touch-icon" sizes="144x144" href="http://example.com/apple-touch-icon-144x144.png" />
<link rel="apple-touch-icon" sizes="152x152" href="http://example.com/apple-touch-icon-152x152.png" />
<link rel="apple-touch-icon" sizes="167x167" href="http://example.com/apple-touch-icon-167x167.png" />
<link rel="apple-touch-icon" sizes="180x180" href="http://example.com/apple-touch-icon-180x180.png" />
<link rel="apple-touch-icon" sizes="1024x1024" href="http://example.com/apple-touch-icon-1024x1024.png" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-640x1136.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-750x1334.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-828x1792.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1125x2436.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1242x2208.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1242x2688.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1536x2048.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1668x2224.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1668x2388.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-2048x2732.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="http://example.com/apple-touch-startup-image-1620x2160.png" />
<link rel="apple-touch-startup-image" media="(width: 320px) and (height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-1136x640.png" />
<link rel="apple-touch-startup-image" media="(width: 810px) and (height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2160x1620.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-1334x750.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-1792x828.png" />
<link rel="apple-touch-startup-image" media="(width: 375px) and (height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2436x1125.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2208x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 414px) and (height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2688x1242.png" />
<link rel="apple-touch-startup-image" media="(width: 768px) and (height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2048x1536.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2224x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 834px) and (height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2388x1668.png" />
<link rel="apple-touch-startup-image" media="(width: 1024px) and (height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="http://example.com/apple-touch-startup-image-2732x2048.png" />
<link rel="icon" type="image/png" sizes="16x16" href="http://example.com/favicon-16x16.png" />
<link rel="icon" type="image/png" sizes="32x32" href="http://example.com/favicon-32x32.png" />
<link rel="icon" type="image/png" sizes="48x48" href="http://example.com/favicon-48x48.png" />
<meta name="msapplication-TileImage" content="http://example.com/mstile-144x144.png /">
<meta name="msapplication-config" content="http://example.com/browserconfig.xml /">
`;
